Prueba color (enlace netlify).

--- a/main.css
+++ b/main.css
@@ -7,7 +7,8 @@
 }
 
 body {
-    background-color: hsl(185, 41%, 84%);   
+    /* background-color: hsl(185, 41%, 84%);    */
+    background-color: wheat;
     font-family: 'Space Mono', monospace;
 }
 .calculator {
