--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@
 }
 
 body {
-    /* background-color: hsl(185, 41%, 84%);    */
-    background-color: wheat;
+    background-color: hsl(185, 41%, 84%);   
     font-family: 'Space Mono', monospace;
 }
 .calculator {
@@ -58,7 +57,7 @@ body {
 }
 /* CSS DEL INPUT */
 .visor {
-    border-radius: 10px;
+    border-radius: 5px;
     border: 1px solid black;
     height: 2em;
     margin-bottom: 1em;
@@ -92,6 +91,12 @@ body {
     margin-bottom: 50px;
 }
 
+::placeholder {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .ppl {
     display: flex;
     flex-wrap: nowrap;
@@ -103,42 +108,70 @@ body {
 }
 
 .input_ppl {
-    width: 22em;
-    height: 2.5em;
+    width: 17em;
+    height: 2em;
     border-radius: 5px;
     border: 1px solid black;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 1em;
+    font-family: 'Space Mono', monospace;
+    color: hsl(183, 100%, 15%);
 }
-
+.input_ppl::placeholder {
+    text-align: right;
+}
 /* CSS DEL DISPLAY */
 
 .display > div {
     font-size: 11px;
+    
 }
  
-.pers {
-    font-size: 10px;
-}
+
 .amount {
     margin-top: 1em;
     margin-left: 1em;
     margin-right: 1em;
-    border: 1px solid black;
+    border: 1px solid red;
     display: inline-flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    align-items: center;
     width: 24em;
 }
 .total {
     margin-left: 1em;
-    border: 1px solid black;
+    border: 1px solid red;
     display: inline-flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    align-items: center;
     width: 24em;
 }
+
+.tot_text {
+   height: 3.5em;
+   width: 7em;
+   display: flex;
+   flex-wrap: wrap;
+   border: 1px solid black;
+}
+.tot_text > div {
+    border: 1px solid black;
+    color:hsl(185, 42%, 90%);;
+}
+
+.pers {
+    font-size: 10px;
+    color:hsl(185, 64%, 16%);
+}
 .zero {
-    font-size: 24px;
+    font-size: 37px;
     font-weight: 700;
+    border: 1px solid black;
+    color: hsl(184, 14%, 56%);
 }
 
 .reset {
@@ -149,7 +182,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 55%;
+    margin-top: 45%;
     background-color: hsl(184, 14%, 56%);
     color: hsl(189, 41%, 97%);
 }
