--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 * {
     padding: 0;
     margin: 0;
+    
 }
 
 body {
@@ -78,17 +79,19 @@ body {
     /* border: 1px solid rgb(103, 62, 180); */
     display: grid;
     height: 5.7em;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-gap: 10px;
     grid-template-rows: repeat(2, 1fr);
     margin-bottom: 2.5em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+    border: 1px solid black;
   }
 
   .pad > button {
       font-size: 16px;
       font-weight: 700;
+      font-family: 'Space Mono', monospace;
       border-radius: 5px;
       border: none;
       height: 2.5em;
@@ -109,9 +112,13 @@ body {
 /* BOTONERA */
   .pad > input {
     border: 1px solid rgb(34, 33, 34);
-    height: 2.85em;
-    width: 6.7em;
+    height: 2.45em;
+    width: 5.5em;
     border-radius: 5px;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+    font-family: 'Space Mono', monospace;   
 }
 
   .pad > input:hover {
@@ -135,6 +142,7 @@ body {
     color: hsl(185, 64%, 16%);
 
 }
+
 
 
 /* INPUT PERSONAS */
